[package]
name = "piet-wgpu"
version = "0.3.2"
edition = "2021"
license = "LGPL-3.0-or-later OR MPL-2.0"
rust-version = "1.65.0"
authors = ["John Nunley <dev@notgull.net>"]
repository = "https://src.notgull.net/notgull/piet-wgpu"
homepage = "https://src.notgull.net/notgull/piet-wgpu"
keywords = ["gpu", "graphics", "2d"]
categories = ["rendering::graphics-api"]
description = "A hardware-accelerated 2D graphics backend for piet using wgpu"

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
piet-hardware = "0.4.0"
tracing = "0.1.37"
wgpu = "0.17.0"

[dev-dependencies]
cosmic-text = "0.9.0"
futures-lite = "1.13.0"
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png"] }
instant = { version = "0.1.12", default-features = false, features = ["wasm-bindgen"] }
piet = { version = "0.6.2", features = ["samples"] }
png = "0.17.10"
tracing-subscriber = "0.3.17"
winit = "0.28.6"

[workspace]
resolver = "2"
members = ["run-wasm"]
